Added FastUtils
also fixed some logging